--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="native_species">Native Species</string>
     <string name="enter_name_of_run">Enter Name of Run:</string>
     <string name="state">State</string>
-    <string name="commercial_availability">Commercial Availability</string>
+    <string name="commercial_availability">Commercial</string>
     <string name="drought_tolerance">Drought Tol.</string>
     <string name="native_to_state">Native to State</string>
     <string name="name_run">Name Run</string>
